--- a/css/style.css
+++ b/css/style.css
@@ -372,7 +372,7 @@ footer p {
 
 .full-title{
 	padding: 80px 0px;
-	background: url(../images/all-title-bg.jpg) no-repeat center;
+	background: url(../images/blog-img-04.jpg) no-repeat center;
 	position: relative;
 }
 .full-title:before{
